# polylabel_cmd

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  license.txt
.github/: dependabot.yml
ci/: before_deploy_manylinux1.sh  before_deploy_osx.sh  before_deploy_windows.ps1
geojson/: feature_geometrycollection.geojson  featurecollection_multi.geojson  geometry_multipolygon.geojson  geometry_polygon.geojson  geometrycollection_nested.geojson  london_polygon.geojson  nested_geometrycollection.geojson
src/: main.rs  pt_test.rs
