[package]
name = "polylabel_cmd"
version = "1.2.4"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "A command-line utility for finding optimum polygon label positions"
readme = "README.md"
repository = "https://github.com/urschrei/polylabel_cmd"
keywords = ["geo", "polylabel", "gis"]
license = "MIT"
exclude = ["geojson/*"]
edition = "2018"

[dependencies]
geo-types = "0.2.0"
geojson = "0.12.0"
polylabel = "1.2.0"
clap = "2.32.0"
serde_json = "1.0.26"
rayon = "1.0.1"
failure = "0.1.3"
failure_derive = "0.1.3"
console = "0.6.1"
indicatif = "0.10.3"

[[bin]]
name = "polylabel"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
