[package]
name = "polylabel_cmd"
version = "1.4.0"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "A command-line utility for finding optimum polygon label positions"
readme = "README.md"
repository = "https://github.com/urschrei/polylabel_cmd"
keywords = ["geo", "polylabel", "gis"]
license = "MIT"
exclude = ["geojson/*"]
edition = "2018"

[dependencies]
geo-types = "0.7.0"
polylabel = "2.4.0"
clap = "4.0.24"
serde_json = "1.0.26"
rayon = "1.0.1"
anyhow = "1.0"
failure = "0.1.3"
failure_derive = "0.1.3"
console = "0.14.0"
indicatif = "0.16.0"

[dependencies.geojson]
version = "0.23.0"
features = ["geo-types"]

[[bin]]
name = "polylabel"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
